Politica de comrpas.

--- a/src/main/resources/templates/PanelControlAdmin.html
+++ b/src/main/resources/templates/PanelControlAdmin.html
@@ -20,6 +20,7 @@
         <div class="collapse navbar-collapse" id="menuPanel">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item"><a class="nav-link" href="/datos-empresa">Datos de la Empresa</a></li>
+               <li class="nav-item"><a class="nav-link" href="/uploadCarusel">Carrusel</a></li>
             <li class="nav-item"><a class="nav-link" href="/listar-productos">Listar Productos</a></li>
             <li class="nav-item"><a class="nav-link" href="/registrar-producto">Registrar Producto</a></li>
             <li class="nav-item"><a class="nav-link" href="/carrito/administrar_pedidos">Solicitud Ventas</a></li>
