--- a/src/main/resources/templates/encabezado.html
+++ b/src/main/resources/templates/encabezado.html
@@ -71,7 +71,7 @@
                 </li>
 
                 <li class="nav-item flex-fill">
-                    <a class="nav-link active" href="#!">Política de compra​ </a>
+                    <a class="nav-link active" href="/empresas/politicas">Política de compra</a>
                 </li>
             </ul>
         </div>
