--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,47 +13,82 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="/css/styles.css" rel="stylesheet" />
+    <style>
+        #carouselExampleAutoplaying {
+            max-width: 100%;
+            margin: 0 auto;
+        }
+
+        #carouselExampleAutoplaying .carousel-inner {
+            max-height: 750px;
+        }
+
+        #carouselExampleAutoplaying .carousel-item img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    </style>
 </head>
 
 <body>
     <!-- Carrusel-->
     <th:block th:include="encabezado"></th:block>
-    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleAutoplaying" class="carousel slide rounded-3 shadow-sm overflow-hidden"
+        data-bs-ride="carousel" data-bs-interval="6000">
+        <!-- Indicadores -->
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="3"
+                aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="4"
+                aria-label="Slide 5"></button>
+        </div>
+
         <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="https://wowslider.com/sliders/demo-80/data1/images/plumage176723_1920.jpg"
-                    class="d-block w-100" alt="...">
+            <div class="carousel-item active" th:if="${carruselImages != null and not #lists.isEmpty(carruselImages)}">
+                <img th:src="@{/uploads/{imagen}(imagen = ${carruselImages[0]})}" class="d-block" alt="Imagen 1" />
             </div>
-            <div class="carousel-item">
-                <img src="https://wowslider.com/sliders/demo-80/data1/images/nature497978_1920.jpg"
-                    class="d-block w-100" alt="...">
+            <div class="carousel-item" th:if="${carruselImages != null and carruselImages.size() > 1}">
+                <img th:src="@{/uploads/{imagen}(imagen = ${carruselImages[1]})}" class="d-block" alt="Imagen 2" />
             </div>
-            <div class="carousel-item">
-                <img src="https://wowslider.com/sliders/demo-80/data1/images/sheet546475_1920.jpg" class="d-block w-100"
-                    alt="...">
+            <div class="carousel-item" th:if="${carruselImages != null and carruselImages.size() > 2}">
+                <img th:src="@{/uploads/{imagen}(imagen = ${carruselImages[2]})}" class="d-block" alt="Imagen 3" />
+            </div>
+            <div class="carousel-item" th:if="${carruselImages != null and carruselImages.size() > 3}">
+                <img th:src="@{/uploads/{imagen}(imagen = ${carruselImages[3]})}" class="d-block" alt="Imagen 4" />
+            </div>
+            <div class="carousel-item" th:if="${carruselImages != null and carruselImages.size() > 4}">
+                <img th:src="@{/uploads/{imagen}(imagen = ${carruselImages[4]})}" class="d-block" alt="Imagen 5" />
             </div>
         </div>
+
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
             data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
+            <span class="visually-hidden">Anterior</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
             data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
+            <span class="visually-hidden">Siguiente</span>
         </button>
     </div>
 
     <div class="col-12 text-center">
-        <h2 class="text-center mt-4" style="font-family: Open Sans; font-weight: bold; font-size: 30px; color: #282828;">
+        <h2 class="text-center mt-4"
+            style="font-family: Open Sans; font-weight: bold; font-size: 30px; color: #282828;">
             Productos</h2>
-         <!--<p class="text-center" style="font-family: Open Sans; font-weight: 500; font-size: 16px; color: #999;">
+        <!--<p class="text-center" style="font-family: Open Sans; font-weight: 500; font-size: 16px; color: #999;">
             Aquí puedes encontrar una variedad de productos para satisfacer tus necesidades.</p>-->
-        </div>
+    </div>
 
-
- <div class="container px-4 px-lg-5 mt-4">
+    <div class="container px-4 px-lg-5 mt-4">
         <form th:action="@{/index}" method="get">
             <div class="row gx-4 gx-lg-5 align-items-center">
                 <div class="col-md-2">
@@ -95,40 +130,37 @@
         </form>
     </div>
 
-
-
     <!-- Section-->
     <section class="py-5">
-    <div class="container px-4 px-lg-5 mt-5">
-        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-            <div class="col mb-5" th:each="producto : ${productos}">
-                <div class="card h-100 border-0"> <!-- Borde eliminado -->
-                    <!-- Product image-->
-                    <img class="card-img-top" th:src="@{/foto/{foto}(foto = ${producto.foto})}" alt="..." />
-                    <!-- Product details-->
-                    <div class="card-body p-4">
-                        <div class="text-center">
-                            <!-- Product name-->
-                            <h5 class="fw-bolder text m-0"
-                                style="font-family: Open Sans; font-style: normal; overflow: hidden; font-size: 16px; text-transform: uppercase; color: #999 !important;"
-                                th:text=${producto.nombre}></h5>
-                            <!-- Product price-->
-                            <span th:text="${'R$ ' + producto.precio}"
-                                style="font-family: Open Sans; font-weight: bold; font-size: 18px; color: #282828;"></span>
+        <div class="container px-4 px-lg-5 mt-5">
+            <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+                <div class="col mb-5" th:each="producto : ${productos}">
+                    <div class="card h-100 border-0"> <!-- Borde eliminado -->
+                        <!-- Product image-->
+                        <img class="card-img-top" th:src="@{/foto/{foto}(foto = ${producto.foto})}" alt="..." />
+                        <!-- Product details-->
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <!-- Product name-->
+                                <h5 class="fw-bolder text m-0"
+                                    style="font-family: Open Sans; font-style: normal; overflow: hidden; font-size: 16px; text-transform: uppercase; color: #999 !important;"
+                                    th:text=${producto.nombre}></h5>
+                                <!-- Product price-->
+                                <span th:text="${'R$ ' + producto.precio}"
+                                    style="font-family: Open Sans; font-weight: bold; font-size: 18px; color: #282828;"></span>
+                            </div>
                         </div>
-                    </div>
-                    <!-- Product actions -->
-                    <div class="card-footer p-0 border-0" style="background-color: transparent;">
-                        <a class="btn w-100 rounded-pill m-0"
-                           style="color: #ffffff; background-color: #ABA398; font-family: Open Sans; font-weight: 500; font-size: 14px; text-transform: uppercase;"
-                           th:href="@{/vermasProducto/{id} (id=${producto.id})}">Comprar</a>
+                        <!-- Product actions -->
+                        <div class="card-footer p-0 border-0" style="background-color: transparent;">
+                            <a class="btn w-100 rounded-pill m-0"
+                                style="color: #ffffff; background-color: #ABA398; font-family: Open Sans; font-weight: 500; font-size: 14px; text-transform: uppercase;"
+                                th:href="@{/vermasProducto/{id} (id=${producto.id})}">Comprar</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
-
+    </section>
 
     <th:block th:include="pie"></th:block>
     <!-- Bootstrap core JS-->
